first test content

--- a/src/components/HeadSEO.astro
+++ b/src/components/HeadSEO.astro
@@ -15,6 +15,7 @@ const imageAlt = content?.image?.alt ?? OPEN_GRAPH.image.alt;
 <link rel="canonical" href={canonicalURL}/>
 
 <!-- OpenGraph Tags -->
+<meta charset="utf-8">
 <meta property="og:title" content={formattedContentTitle}/>
 <meta property="og:type" content="article"/>
 <meta property="og:url" content={canonicalURL}/>
