--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -1,7 +1,6 @@
 ---
 import { getLanguageFromURL, KNOWN_LANGUAGE_CODES } from '../../languages.ts';
 import * as CONFIG from '../../config.ts';
-import AstroLogo from './AstroLogo.astro';
 import SkipToContent from './SkipToContent.astro';
 import SidebarToggle from './SidebarToggle.tsx';
 import LanguageSelect from './LanguageSelect.tsx';
@@ -40,7 +39,7 @@ const lang = currentPage && getLanguageFromURL(currentPage);
 
     .logo a {
       padding: 0.5em 0.25em;
-      margin: -0.5em -0.25em;
+      margin: -0.5em .25em;
       text-decoration: none;
       font-weight: bold;
     }
@@ -120,9 +119,8 @@ const lang = currentPage && getLanguageFromURL(currentPage);
         <SidebarToggle client:idle/>
     </div>
     <div class="logo flex">
-        <AstroLogo size={40} />
         <a href="/">
-          <h1>Documentation</h1>
+          <h1>UniDoc</h1>
         </a>
     </div>
     <div style="flex-grow: 1;"></div>
