--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,8 +1,11 @@
 :root {
-  --font-fallback: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+  --font-fallback: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
+    sans-serif, Apple Color Emoji, Segoe UI Emoji;
   --font-body: system-ui, var(--font-fallback);
-  --font-mono: 'IBM Plex Mono', Consolas, 'Andale Mono WT', 'Andale Mono', 'Lucida Console', 'Lucida Sans Typewriter', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono',
-    'Liberation Mono', 'Nimbus Mono L', Monaco, 'Courier New', Courier, monospace;
+  --font-mono: "IBM Plex Mono", Consolas, "Andale Mono WT", "Andale Mono",
+    "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono",
+    "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco,
+    "Courier New", Courier, monospace;
 
   /*
    * Variables with --color-base prefix define
@@ -22,8 +25,8 @@
   --color-base-blue-dark: 212, 72%;
   --color-base-green: 158, 79%;
   --color-base-orange: 22, 100%;
-  --color-base-purple: 269, 79%;
-  --color-base-red: 351, 100%;
+  --color-base-purple: #7b2cbf;
+  --color-base-red: 359, 94%;
   --color-base-yellow: 41, 100%;
 
   /*
@@ -50,14 +53,15 @@
   --color-green: var(--color-base-green), 42%;
   --color-orange: var(--color-base-orange), 50%;
   --color-purple: var(--color-base-purple), 54%;
+  --color-purple2: #9d4edd, 54%;
   --color-red: var(--color-base-red), 54%;
   --color-yellow: var(--color-base-yellow), 59%;
 }
 
 :root {
   color-scheme: light;
-  --theme-accent: hsla(var(--color-blue), 1);
-  --theme-text-accent: hsla(var(--color-blue), 1);
+  --theme-accent: hsla(var(--color-green), 1);
+  --theme-text-accent: hsla(var(--color-green), 1);
   --theme-accent-opacity: 0.15;
   --theme-divider: hsla(var(--color-gray-95), 1);
   --theme-text: hsla(var(--color-gray-10), 1);
@@ -86,22 +90,22 @@ body {
 :root.theme-dark {
   color-scheme: dark;
   --theme-accent-opacity: 0.15;
-  --theme-accent: hsla(var(--color-blue), 1);
-  --theme-text-accent: hsla(var(--color-blue), 1);
+  --theme-accent: hsla(#7b2cbf, 1);
+  --theme-text-accent: hsla(var(--color-red), 1);
   --theme-divider: hsla(var(--color-gray-10), 1);
   --theme-text: hsla(var(--color-gray-90), 1);
   --theme-text-light: hsla(var(--color-gray-80), 1);
 
   /* @@@: not used anywhere */
   --theme-text-lighter: hsla(var(--color-gray-40), 1);
-  --theme-bg: hsla(215, 28%, 17%, 1);
+  --theme-bg: #240046;
   --theme-bg-hover: hsla(var(--color-gray-40), 1);
   --theme-bg-offset: hsla(var(--color-gray-5), 1);
   --theme-code-inline-bg: hsla(var(--color-gray-10), 1);
   --theme-code-inline-text: hsla(var(--color-base-white), 100%, 1);
   --theme-code-bg: hsla(var(--color-gray-5), 1);
   --theme-code-text: hsla(var(--color-base-white), 100%, 1);
-  --theme-navbar-bg: hsla(215, 28%, 17%, 1);
+  --theme-navbar-bg: #3c096c;
   --theme-selection-color: hsla(var(--color-base-white), 100%, 1);
   --theme-selection-bg: hsla(var(--color-purple), var(--theme-accent-opacity));
 
